--- a/Exhibition.Portal.Api/wwwroot/src/app/app.component.html
+++ b/Exhibition.Portal.Api/wwwroot/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-navigation-sidebar></app-navigation-sidebar>
 <router-outlet></router-outlet>
+<a class="scroll-to-top rounded" href="#page-top">
+    <i class="fas fa-angle-up"></i>
+  </a>
