--- a/Exhibition.Portal.Api/wwwroot/src/app/pages/navigation/navigation.component.html
+++ b/Exhibition.Portal.Api/wwwroot/src/app/pages/navigation/navigation.component.html
@@ -4,7 +4,7 @@
       <div class="sidebar-brand-icon rotate-n-15">
         <i class="fas fa-laugh-wink"></i>
       </div>
-      <div class="sidebar-brand-text">徐州展厅管理</div>
+      <div class="sidebar-brand-text">xxxxxxxxxxxxx</div>
     </a>
     <!-- Divider -->
     <hr class="sidebar-divider my-0">
@@ -23,4 +23,9 @@
           </div>
         </div>
       </li>   
-  </ul>
+</ul>
+<div id="content-wrapper" class="d-flex flex-column">
+  <a class="scroll-to-top rounded" href="#page-top">
+    <i class="fas fa-angle-up"></i>
+  </a>
+</div>
