--- a/Exhibition.Portal.Api/wwwroot/src/app/pages/resources/resource.component.html
+++ b/Exhibition.Portal.Api/wwwroot/src/app/pages/resources/resource.component.html
@@ -1,3 +1,24 @@
-<div id="content-wrapper" class="d-flex flex-column">
-    xxxxxxxxxxxxxxxxx
-</div>
+    <!-- Content Wrapper -->
+    <div id="content-wrapper" class="d-flex flex-column">
+        <!-- Main Content -->
+        <div id="content">  
+        <app-topbar-component></app-topbar-component>
+  
+          <!-- Begin Page Content -->
+          <div class="container-fluid">
+        
+  
+         
+  
+          </div>
+          <!-- /.container-fluid -->
+  
+        </div>
+        <!-- End of Main Content -->
+  
+        <!-- Footer -->
+        <app-footer-component></app-footer-component>
+        <!-- End of Footer -->
+  
+      </div>
+      <!-- End of Content Wrapper -->
