--- a/Exhibition.Portal.Web/src/app/resource/resource.component.html
+++ b/Exhibition.Portal.Web/src/app/resource/resource.component.html
@@ -5,23 +5,22 @@
                 <div class="card">
                     <div class="card-header card-header-danger">
                         <h4 class="card-title ">所有资源(/assets/userfiles)</h4>
-                        <p class="card-category">维护播放内容包括视频,图片集,H5网页等</p>
+                        <p class="card-category">维护播放内容包括视频,图片集,H5网页,串口指令等</p>
                     </div>
                     <div class="card-body">
                         <div class="inline-block">
 
                             <div class="dropdown">
-                                <button mat-raised-button type="submit" class="btn btn-primary ">
+                                <button mat-raised-button (click)="onGoRoot()" class="btn btn-white  ">
                                     <i class="material-icons">home</i>
-                                    根
+                                    根目录
                                 </button>
-                                <button class="btn btn-white dropdown-toggle" type="button" 
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <button class="btn btn-white dropdown-toggle" type="button" data-toggle="dropdown"
+                                    aria-haspopup="true" aria-expanded="false">
                                     更多操作
                                 </button>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                        <a class="dropdown-item" href="#">新建文件夹</a>
-                                    <a class="dropdown-item" href="#">上一级</a>
+                                    <a class="dropdown-item" href="#">新建文件夹</a>                                    
                                     <a class="dropdown-item" href="#">上传文件</a>
                                 </div>
                             </div>
@@ -34,33 +33,37 @@
                                     <th>路径</th>
                                     <th>操作</th>
                                 </thead>
-                                <tbody *ngIf="resources?.length != 0">
-                                    <tr>
-                                        <td colspan="3"><a class="btn-white" href="/image">
-                                            <i class="material-icons">folder</i>上一级...</a></td>
+                                <tbody >
+                                    <tr *ngIf="parent!=null">
+                                        <td  colspan="3"><a class="btn-white" 
+                                            (click)="onGoUp()" href="javascript:void(0);">
+                                                <i class="material-icons">folder</i>上一级...</a></td>
                                     </tr>
                                     <tr *ngFor="let resource of resources">
                                         <td>
-                                            <a class="btn-white" (click)="onClickResource(resource)" href="javascript:void()">
-                                                <i class="material-icons">{{getIcoName(resource.type)}}</i> {{ resource.name }}</a>
+                                            <a *ngIf="!resource.editable" class="btn-white" (click)="onClickResource(resource)"
+                                                href="javascript:void(0);">
+                                                <i class="material-icons">{{getIcoName(resource.type)}}</i>
+                                                {{ resource.name }}</a>
+                                            <input  *ngIf="resource.editable" type="text"  
+                                            [ngModel]="edittingContext" (keypress)="OnInputBoxKeyPress($event,resource)" />
                                         </td>
                                         <td>{{ resource.fullName }}</td>
                                         <td class="td-actions text-left">
-                                            <button mat-raised-button type="button" matTooltip="编辑" [matTooltipPosition]="'above'" class="btn btn-primary btn-link btn-sm btn-just-icon">
+                                            <button mat-raised-button type="button" matTooltip="{{getmatTooltip(resource.editable)}}" (click)="saveOrEditing(resource)"
+                                                [matTooltipPosition]="'above'"
+                                                class="btn btn-primary btn-link btn-sm btn-just-icon">
                                                 <i class="material-icons">edit</i>
                                             </button>
-                                            <button mat-raised-button type="button" matTooltip="删除" [matTooltipPosition]="'above'" class="btn btn-danger btn-link btn-sm btn-just-icon">
+                                            <button mat-raised-button type="button" matTooltip="删除"
+                                                [matTooltipPosition]="'above'"
+                                                class="btn btn-danger btn-link btn-sm btn-just-icon">
                                                 <i class="material-icons">close</i>
                                             </button>
                                         </td>
                                     </tr>
-                                </tbody>
-                                <tbody *ngIf="persons?.length == 0">
-                                    <tr>
-                                        <td colspan="3" class="no-data-available">No data!</td>
-                                    </tr>
-                                 <tbody>
-                            </table>                  
+                                </tbody>                                
+                            </table>
                         </div>
                     </div>
                 </div>
