--- a/Exhibition.Portal.Web/src/assets/css/demo.css
+++ b/Exhibition.Portal.Web/src/assets/css/demo.css
@@ -23,3 +23,9 @@
   position: absolute;
   width: 260px;
 }
+.cdk-global-overlay-wrapper, .cdk-overlay-container {
+  z-index: 99999 !important;
+}
+.cdk-overlay-connected-position-bounding-box {
+  z-index: 99999 !important;
+}
