--- a/Exhibition.Portal.Web/src/app/components/terminaledit/TerminalContent.component.html
+++ b/Exhibition.Portal.Web/src/app/components/terminaledit/TerminalContent.component.html
@@ -1,46 +1,44 @@
 <div class="modal-header">
-        <h5 *ngIf="(current==null||current.ip=='')" class="modal-title" id="modal-basic-title">维护播放终端</h5>
-        <h5 *ngIf="(current!=null&&current.ip!='')" class="modal-title" id="modal-basic-title">
-            维护播放终端({{current.ip}})
-        </h5>
-        <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
-            <span aria-hidden="true">&times;</span>
-        </button>
+    <h5 *ngIf="(current==null||current.ip=='')" class="modal-title" id="modal-basic-title">维护播放终端</h5>
+    <h5 *ngIf="(current!=null&&current.ip!='')" class="modal-title" id="modal-basic-title">
+        维护播放终端({{current.ip}})
+    </h5>
+    <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+<div class="modal-body">
+    <div class="row">
+        <div class="col-sm-6">
+            <mat-form-field class="example-full-width">
+                <input type="text" matInput placeholder="#Ip" [(ngModel)]="current.ip" value="{{current.ip}}">
+            </mat-form-field>
+        </div>
+        <div class="col-sm-6">
+            <mat-form-field class="example-full-width">
+                <input matInput placeholder="名称" [(ngModel)]="current.name" value="{{current.name}}">
+            </mat-form-field>
+        </div>
     </div>
-    <div class="modal-body">
-        <div class="row">
-            <div class="col-sm-6">
-                <mat-form-field class="example-full-width">
-                    <input type="text" matInput placeholder="#Ip" [(ngModel)]="current.ip"
-                        value="{{current.ip}}">
-                </mat-form-field>
-            </div>
-            <div class="col-sm-6">
-                <mat-form-field class="example-full-width">
-                    <input matInput placeholder="名称" [(ngModel)]="current.name" value="{{current.name}}">
-                </mat-form-field>
-            </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <mat-form-field class="example-full-width">
+                <input matInput placeholder="Endpoint" [(ngModel)]="current.endpoint" value="{{current.endpoint}}">
+            </mat-form-field>
         </div>
-        <div class="row">
-            <div class="col-sm-12">
-                <mat-form-field class="example-full-width">
-                    <input matInput placeholder="Endpoint" [(ngModel)]="current.endpoint"
-                        value="{{current.endpoint}}">
-                </mat-form-field>
-            </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <mat-form-field class="example-full-width">
+                <textarea matInput placeholder="备注" [(ngModel)]="current.description"
+                    value="{{current.description}}"></textarea>
+            </mat-form-field>
         </div>
-        <div class="row">
-            <div class="col-sm-12">
-                <mat-form-field class="example-full-width">
-                    <textarea matInput placeholder="备注" [(ngModel)]="current.description"
-                        value="{{current.description}}"></textarea>
-                </mat-form-field>
-            </div>
-            <input type="hidden" [(ngModel)]="current.windows">
-        </div>
+        <input type="hidden" [(ngModel)]="current.windows">
+    </div>
 
-    </div>
-    <div class="modal-footer">
-        <button type="button" class="btn btn-danger" (click)="CreateOrUpdateTerminal(current)">保存</button>
-        <button type="button" class="btn btn-white" (click)="modalRef.close('Close')">关闭</button>
-    </div>
+</div>
+<div class="modal-footer">
+    <button type="button" class="btn btn-danger" (click)="CreateOrUpdateTerminal(current)">保存</button>
+    <button type="button" class="btn btn-white" (click)="modalRef.close('Close')">关闭</button>
+</div>
