--- a/Exhibition.Portal.Web/src/app/terminal/terminal.component.html
+++ b/Exhibition.Portal.Web/src/app/terminal/terminal.component.html
@@ -4,7 +4,7 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header card-header-danger">
-                        <h4 class="card-title ">指令管理</h4>
+                        <h4 class="card-title ">设备管理</h4>
                         <p class="card-category">管理播放终端</p>
                     </div>
                     <div class="card-body ">
