--- a/Exhibition.Portal.Web/src/app/components/directive/directive.component.html
+++ b/Exhibition.Portal.Web/src/app/components/directive/directive.component.html
@@ -25,17 +25,17 @@
     <div class="row">
         <div class="col-sm-6">
             <mat-form-field>
-                <mat-select [formControl]="terminalCtrl" placeholder="目标计算机" #targetIpSelect  [(ngModel)]="current.terminal">
-                    <mat-option *ngFor="let terminal of terminals " [value]="terminal">
-                        {{terminal.name}}({{terminal.ip}})
+                <mat-select [formControl]="terminalCtrl" placeholder="目标计算机" #targetIpSelect  [(ngModel)]="current.termianlIp">
+                    <mat-option *ngFor="let om of omTerminals " [value]="om.key">
+                        {{om.key}}({{om.text}})
                     </mat-option>
                 </mat-select>
             </mat-form-field>
         </div>
         <div class="col-sm-6">
             <mat-form-field>
-                <mat-select [formControl]="windowCtrl" placeholder="指定窗口" #windowSelect  [(ngModel)]="current.window">
-                    <mat-option *ngFor="let window of windows " [value]="window">
+                <mat-select [formControl]="windowCtrl" placeholder="指定窗口" #windowSelect  [(ngModel)]="current.windowId">
+                    <mat-option *ngFor="let window of windows " [value]="window.id">
                         {{window.id}} / {{window.location.x}} * {{window.location.y}} (x * y) / {{window.size.width}} *
                         {{window.size.height}} (宽 * 高)
                     </mat-option>
@@ -46,13 +46,13 @@
     <div class="row">
         <div class="col-sm-12">
             <mat-form-field>
-                <mat-select [formControl]="resourceServerSideCtrl" placeholder="相关资源" #resourceSelect [(ngModel)]="current.resource">
+                <mat-select [formControl]="resourceServerSideCtrl" placeholder="相关资源" #resourceSelect [(ngModel)]="current.resourceFullName">
                     <!-- place ngx-mat-select-search inside mat-option to allow opening without initial selection -->
                     <mat-option>
                         <ngx-mat-select-search [formControl]="resourceServerSideFilteringCtrl" [searching]="searching">
                         </ngx-mat-select-search>
                     </mat-option>
-                    <mat-option *ngFor="let resource of filteredServerSideResource | async" [value]="resource">
+                    <mat-option *ngFor="let resource of filteredServerSideResource | async" [value]="resource.fullName">
                         {{resource.workspace}} / {{resource.name}}
                     </mat-option>
                 </mat-select>
