--- a/Exhibition.Portal.Web/src/app/components/terminaledit/window.component.html
+++ b/Exhibition.Portal.Web/src/app/components/terminaledit/window.component.html
@@ -10,7 +10,7 @@
         <div class="col-sm-12">
             <mat-form-field class="example-full-width">
                 <input type="text" matInput placeholder="默认监视器" [(ngModel)]="newly.monitor"
-                    value="{{newly.location.x}}">
+                    value="{{newly.monitor}}">
             </mat-form-field>
         </div>
     </div>
